--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
   "manifest_version": 2,
   "name": "Instension",
-  "version": "0.0.0",
+  "version": "1.0.0",
+
+  "description": "Extension to enhance available features of Instagram website",
   "icons": {
     "16":  "icons/logo_16.png",
     "32":  "icons/logo_32.png",
