Fix not working context menu commands right after the page was loaded

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
       "matches": [
         "*://*.instagram.com/*"
       ],
+      "run_at": "document_start",
       "js": [
         "scripts/element_finder.js",
         "scripts/content.js"
